# XDL

./: README.md
ch07/: 第7章完成度统计表.xlsx  说明.txt
ch07/实训/: gmapping.docx  gmapping.pptx  gmapping老师文档.docx  hector.docx  hector.pptx  karto.pptx  karto学生文档.docx  orb_slam学生讲稿.docx  orb_slam老师讲稿.docx  换一种仿真环境.docx  换一种仿真环境.pptx  换一种仿真环境学生文档.docx  换一种仿真环境老师文档.docx
ch07/授课/: SLAM讲稿.docx  slam.docx  讲义.doc
ch08/: readme.txt  第8章完成度统计表.xlsx
ch08/实训/: Navigation讲义.doc  navigation实训PPT.pptx  navigation实训讲稿.docx
ch08/授课/: navigation授课讲稿.docx
ch09/: moveit2.pptx  movelt2.docx
ch09/action_related/: action_讲义.docx
ch10/: README.md
ch10/10.1/: 传感器调研报告.docx  (+2 more)
ch11课件练习题目列表/: TensorFlow环境搭配与Pycharm编译器(实训).docx  TensorFlow组件实现数学运算(实训).docx  Tensorboard可视化(实训).docx  ros_Tensorflow实现目标识别案例.docx  ros－tensorflow手写数字识别.docx
hq262/: listener代码解释.docx  talker代码解释.docx  韩国ch7.2-topic的Python实现.pptx  韩国ch7.2-topic的Python实现讲稿.docx
hq267/: camera_calib.docx  camera_calibration.py  camera_calibriation.md
week01-day1/: 1w1d1讲稿.docx  2w1d1.pptx  2w1d1讲稿.docx  4w1d1.pptx  视频列表.txt
week01-day2/: w1d2-1.docx  w1d2-2.docx  w1d2-2.pptx  w1d2-3.docx  w1d2-3.pptx
week01-day3/: 1-ROS下输出Hello World讲稿.docx  1-ROS下运行输出Hello world.pptx  2-node.pptx  2-node讲稿.docx  3-topic代码编写.pptx  3-topic代码编写讲稿.docx  4-topic.pptx  4-topic讲稿 .docx
week01-day4/: w1d4.pptx  w1d4文档.doc  w1d4讲稿.docx
week02-day3/class2-class4/ rqt/源码/: CMakeLists.txt  package.xml
week02-day3/class2-class4/ rqt/源码/scripts/: sine_talker.py
week02-day3/class2-class4/ rqt/源码/src/: sine_talker.cpp
week04-day4/: TODO
(+231 files in other folders)
